# molecular_ml_workshops

./: 01_rdkit_intro.ipynb  01_rdkit_intro_solution.ipynb  02_molecular_property_prediction.ipynb  02_molecular_property_prediction_solution.ipynb  03_virtual_screening.ipynb  03_virtual_screening_solution.ipynb  README.md  empty_02_molecular_property_prediction.ipynb  pyproject.toml  requirements.txt
