[tool.poetry]
name = "molecular-ml-workshops"
version = "1.0.0"
description = ""
authors = ["Jakub Adamczyk <jadamczy@agh.edu.pl>", "Piotr Ludynia <piotrztych@agh.edu.pl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

lightgbm = "*"
jupyter = "*"
matplotlib = "*"
pandas = "2.*"
pyarrow = "*"
scikit-fingerprints = "*"
scikit-learn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
